--- a/app/src/main/res/layout/activity_github_user_detail.xml
+++ b/app/src/main/res/layout/activity_github_user_detail.xml
@@ -16,6 +16,7 @@
         android:paddingBottom="16dp"
         />
     <TextView
+        android:id="@+id/ln_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
@@ -24,6 +25,7 @@
         android:text="@string/username"
         android:gravity="center"/>
     <TextView
+        android:id="@+id/ln_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
